--- a/scss/_hentry.scss
+++ b/scss/_hentry.scss
@@ -1,6 +1,7 @@
 article.hentry {
-
-
+	background: #FFF;
+	border-radius: 0.4em;
+	padding: 2em;
 
 	.entry-header {
 
@@ -13,16 +14,29 @@ article.hentry {
 	.entry-content { }
 
 	.entry-meta {
-		.byline,
+		margin-top: -0.5em;
+		margin-bottom: 1em;
+		font-size: 0.9em;
+		&, a { color: #999; }
+
 		.cat-links,
 		.tags-links,
 		.posted-on { display: block; } 
+		.updated,
+		.byline { display: none; }
+	}
+
+	.footer-meta {
+		a { 
+			margin-top: 1.5em;
+			@extend .button; 
+		}
 	}
 
 	/* --- List padding --- */
 
 	& + & {
-		padding-top: 2em;
+		margin-top: 2em;
 	}
 
 	/* --- Image handling --- */
